<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/login_container"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_header_height"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login_descrpition"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/login_spinner"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_height="wrap_content"/>

    <View
        android:layout_height="1.5dp"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_marginLeft="@dimen/spinner_margin"
        android:layout_marginRight="@dimen/spinner_margin"
        android:layout_marginBottom="@dimen/medium_margin"/>

    <AutoCompleteTextView
        android:id="@+id/login_autotextview"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login_week_default"/>

    <Spinner
        android:id="@+id/week_spinner"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_save_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/login_save"/>

</LinearLayout>
